[package]
name = "roguelike-rs"
version = "0.1.0"
authors = ["Axel Magnuson <axelmagn@gmail.com>"]

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
piston2d-sprite = "0.31.0"
piston_window = "0.61.0"
image = "0.12.1"
find_folder = "0.3.0"
piston-ai_behavior = "0.17.0"
gfx = "0.13.0"
piston2d-gfx_graphics = "0.35.0"
pistoncore-glutin_window = "0.33.0"
gfx_device_gl = "0.12.0"
gfx_core = "0.5.1"
